update sito agginto linka alle pagine

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div class="row">
 			<div class="col-sm">
 				<div class="card" style="width: 18rem;">
-					<a href="https://www.google.it/"> <img class="card-img-top" src="card1.jpg" alt="Card image cap" height="171px"> </a>
+					<a href="studiaconnoi.html"> <img class="card-img-top" src="studiaconnoi.jpg" alt="Card image cap" height="171px"> </a>
 					<div class="card-body">
 						<h5 class="card-title">Studia con noi</h5>
 						<p class="card-text">Insegnanti professionisti vi seguiranno durante tutto il percorso di apprendimento e di studio. Ripassi e spiegazioni su qualsiasi argomento studiato a lezione</p>
@@ -86,7 +86,7 @@
 			</div>
 			<div class="col-sm">
 				<div class="card" style="width: 18rem;">
-					<a href="https://www.google.it/"> <img class="card-img-top" src="tariffe.jpg" alt="Card image cap" height="171px"> </a>
+					<a href="tariffe.html"> <img class="card-img-top" src="tariffe.jpg" alt="Card image cap" height="171px"> </a>
 					<div class="card-body">
 						<h5 class="card-title">Tariffe</h5>
 						<p class="card-text">Le nostre tariffe sono alla portata di tutti. Massima disponibilità verso le famiglie in difficoltà economiche.</p>
