--- a/studiaconnoi.html
+++ b/studiaconnoi.html
@@ -49,7 +49,7 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img class="d-block w-100" src="tariffe.jpg" alt="First slide">
+				<img class="d-block w-100" src="studiaconnoi.jpg" alt="First slide">
 			</div>
 		</div>
 		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -65,76 +65,39 @@
 		<div class="row">
 			<div class="col-sm">
 				<br>
-				<h5>PREZZO A ORE</h5>
+				<h5>MATERIE</h5>
 				<table class="table">
 					<thead>
 						<tr>
-							<th scope="col">Età</th>
-							<th scope="col">Ore</th>
-							<th scope="col">Prezzo</th>
+							<th scope="col">Tipologia</th>
+							<th scope="col">Servizi offerti</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<td>dai 6 ai 10 anni<br>Scuole Primarie</td>
-							<td>1h</td>
-							<td>17,00€</td>
+							<td>Linguistiche</td>
+							<td>Inglese <br>Francese<br>Spagnolo<br>Tedesco</td>
 						</tr>
 						<tr>
-							<td>dai 11 ai 13 anni<br>Scuole Secondarie di primo grado</td>
-							<td>1h</td>
-							<td>18,00€</td>
+							<td>Letterarie</td>
+							<td>Letteratura Italiana<br>Italiano<br>Grammatica<br>Storia<br>Latino<br>Greco<br>Pedagogia</td>
 						</tr>
 						<tr>
-							<td>dai 14 ai 18 anni<br>Scuole Primarie di secondo grado</td>
-							<td>1h</td>
-							<td>19,00€</td>
+							<td>Scientifiche</td>
+							<td>Matematica<br>Algebra<br>Geometria<br>Scienze<br>Chimica<br>Fisica<br>Meteorologia<br>Genetica</td>
 						</tr>
 						<tr>
-							<td>dai 19 anni<br>Università - test di ingresso</td>
-							<td>1h</td>
-							<td>24,00€</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-			<div class="col-sm">
-				<br>
-				<h5>PREZZO A PACCHETTO</h5>
-				<table class="table">
-					<thead>
-						<tr>
-							<th scope="col">Età</th>
-							<th scope="col">Ore</th>
-							<th scope="col">Prezzo</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>dai 6 ai 10 anni<br>Scuole Primarie</td>
-							<td>5h<br>10h</td>
-							<td>80,00€<br>160,00€</td>
+							<td>Tecniche</td>
+							<td>Disegno Tecnico<br>Artistico<br>Storia dell'Arte<br>Macchine<br>Elettronica<br>...</td>
 						</tr>
 						<tr>
-							<td>dai 11 ai 13 anni<br>Scuole Secondarie di primo grado</td>
-							<td>5h<br>10h</td>
-							<td>85,00€<br>170,00€</td>
-						</tr>
-						<tr>
-							<td>dai 14 ai 18 anni<br>Scuole Primarie di secondo grado</td>
-							<td>5h<br>10h</td>
-							<td>90,00€<br>180,00€</td>
-						</tr>
-						<tr>
-							<td>dai 19 anni<br>Università - test di ingresso</td>
-							<td>10h</td>
-							<td>220,00€</td>
+							<td>Finanziarie</td>
+							<td>Economia<br>Matematica Finanziaria<br>Statistica<br>Diritto<br>...</td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
 		</div>
-
 	</div>
 
 	<!--CARDS-->
@@ -143,7 +106,7 @@
 		<div class="row">
 			<div class="col-sm">
 				<div class="card" style="width: 18rem;">
-					<a href="studiaconnoi.html"> <img class="card-img-top" src="studiaconnoi.jpg" alt="Card image cap" height="171px"> </a>
+					<a href="#"> <img class="card-img-top" src="studiaconnoi.jpg" alt="Card image cap" height="171px"> </a>
 					<div class="card-body">
 						<h5 class="card-title">Studia con noi</h5>
 						<p class="card-text">Insegnanti professionisti vi seguiranno durante tutto il percorso di apprendimento e di studio. Ripassi e spiegazioni su qualsiasi argomento studiato a lezione</p>
