--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">About</a>
+						<a class="nav-link" href="about.html">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Services</a>
+						<a class="nav-link" href="studiaconnoi.html">Services</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Contact</a>
