--- a/tariffe.html
+++ b/tariffe.html
@@ -17,8 +17,8 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Home
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">Home
 							<span class="sr-only">(current)</span>
 						</a>
 					</li>
@@ -40,27 +40,11 @@
 			<h1>ASS. CULT. RICR. S.D. STUDENTI IN VISTA SERVICE</h1>
 		</div>
 	</div>
-	<!--CAROSELLO-->
-	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-		<ol class="carousel-indicators">
-			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-		</ol>
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img class="d-block w-100" src="tariffe.jpg" alt="First slide">
-			</div>
-		</div>
-		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
+	<div class="container">
+		<img class="d-block w-100" src="tariffe.jpg" alt="First slide">
 	</div>
+	<!--CAROSELLO-->
+	
 	<div class="container">
 		<div class="row">
 			<div class="col-sm">
